2006-11-21  Akim Demaille  <demaille@gostai.com>

	Run reindent
	* src/ucommand.cc, src/uexpression.cc, src/unamedparameters.cc, 
	* src/uqueue.cc, src/uqueue.hh, src/uvalue.cc: Formatting changes.

2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Use svn-externals.mk
	* Makefile.am, src/Makefile.am, tests/Makefile.am: here.

2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Formatting changes
	* src/ubinary.hh, src/ucommand.hh: here.

2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Coding style changes
	* src/ubinary.cc, src/ucommand.cc, src/ucommandqueue.cc,
	* src/uconnection.cc, src/ufunction.cc,
	* src/ughostconnection.cc, src/unamedparameters.cc,
	* src/uobj.cc, src/uqueue.cc, src/userver.cc, src/uvalue.cc,
	* src/uvariable.cc, src/uvariablelist.cc,
	* src/uvariablename.cc:
	White space changes.
	Initialize members a la C++.

2006-11-18  Jean-Christophe Baillie  <baillie@gostai.com>
        rewrite UConnection sending mechanism.

        UConnection::flush is introduced to be able to delay the effective
        sending of the buffer into the connection. Functions like 'sendc' do not
        flush the buffer, whereas 'send' does.
        
        'sendPrefix" now puts a marker in the circular buffer before the
        prefix and if anything goes wrong in the subsequent sending, the
        circular buffer queue can "revert" to this marker. This will allow now
        to have atomic message sending, preventing partial sending of a
        header and then failure of the body (large binary for example). The
        body failure will trigger a call to 'revert' and cancel the whole
        message out of the circular buffer (and also lock the queue with
        locked_ so that next attempts will also fail, until we cross another
        'sendPrefix'). Since the above flush-based mecanism ensures than nothing 
        has been sent through the network yet, this cancelation is valid. Both